Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Fixed
-
Affects Version/s: Qt Creator 4.9.2
-
Fix Version/s: Qt Creator 4.11.0-beta1
-
Component/s: C/C++/Obj-C++ Support, Project & Build Management: CMake
-
Labels:
-
Environment:Windows 7 and Windows 10, MinGW 7.3.0 64bit, Cmake and cotire
-
Platform/s:
-
Commits:17270366f364e35d1fb98c7e6ce207387874b0cf (qt-creator/qt-creator/4.11) 8ee22dd597ea67886f2fd605be3a4c17f551c5ae (qt-creator/tqtc-qt-creator/4.11) a1e61fd4b905e604f545d3d230071916d757fd20 (qt-creator/qt-creator/master)
Description
Qt Creators Clang Code Model, autocompletion and Outline are working as long as precompiled headers have not been build. After build those functions are not working for all files that are newly opened in the text editor.
The Qt Creator Option C++ > Code Model > "Ignore precompiled headers" does not have any effect on this behavior.
See the minimal sample project attached to reproduce:
1) Import the project into Qt Creator
2) Do not open any files in the code text editor!
3) Build the project (and thus the precompiled headers)
4) Open testclass.cpp in the code text editor
5) Autocomplete, Outline and Clang Code Model are not working
6) Close testclass.cpp code editor
7) Clean build project (thus deleting precompiled headers)
6) Open testclass.cpp > Autocomplete and Clang Code Model are working again