CppTools: Do not use PCH when build PCH artifacts exist closeby

Clang cannot handle gcc pch files which are close to the forced
include header.

Fixes: QTCREATORBUG-22888
Change-Id: I0d678a889d1fb62bf3c6850277e13271efb91eea
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>